Exceptions Made/ Remade the Answers/Questions & Severity Working