@@ -1,5 +1,7 @@
 package ipleiria.risk_matrix.service;
+
 import ipleiria.risk_matrix.dto.QuestionDTO;
+import ipleiria.risk_matrix.dto.QuestionOptionDTO;
 import ipleiria.risk_matrix.models.questionnaire.Questionnaire;
 import ipleiria.risk_matrix.models.questions.Question;
 import ipleiria.risk_matrix.models.questions.QuestionCategory;
@@ -8,6 +10,7 @@ import ipleiria.risk_matrix.repository.QuestionRepository;
 import ipleiria.risk_matrix.repository.QuestionnaireRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -21,31 +24,27 @@ public class QuestionService {
     @Autowired
     private QuestionnaireRepository questionnaireRepository;
 
-
-
-    // Criar uma nova pergunta
+    // Create a new question
     public QuestionDTO createQuestion(Long questionnaireId, QuestionDTO questionDTO) {
         Questionnaire questionnaire = questionnaireRepository.findById(questionnaireId)
                 .orElseThrow(() -> new RuntimeException("Questionnaire not found"));
 
+        // Build Question entity
         Question question = new Question();
         question.setQuestionText(questionDTO.getQuestionText());
+
         try {
             question.setCategory(QuestionCategory.valueOf(questionDTO.getCategory()));
         } catch (IllegalArgumentException e) {
             throw new RuntimeException("Invalid category: " + questionDTO.getCategory());
         }
+
         question.setQuestionnaire(questionnaire);
 
-        // ✅ Create options if available
-        List<QuestionOption> options = questionDTO.getOptions().stream().map(optionDTO -> {
-            QuestionOption option = new QuestionOption();
-            option.setQuestion(question);
-            option.setOptionText(optionDTO.getOptionText());
-            option.setImpact(optionDTO.getImpact());
-            option.setProbability(optionDTO.getProbability());
-            return option;
-        }).toList();
+        // Convert incoming DTO options to entities
+        List<QuestionOption> options = questionDTO.getOptions().stream()
+                .map(optionDTO -> mapToQuestionOption(optionDTO, question))
+                .collect(Collectors.toList());
 
         question.setOptions(options);
         questionRepository.save(question);
@@ -53,32 +52,40 @@ public class QuestionService {
         return new QuestionDTO(question);
     }
 
+    private QuestionOption mapToQuestionOption(QuestionOptionDTO optionDTO, Question question) {
+        QuestionOption option = new QuestionOption();
+        option.setQuestion(question);
+        option.setOptionText(optionDTO.getOptionText());
+        // The new fields instead of impact/probability:
+        option.setOptionType(optionDTO.getOptionType());    // IMPACT or PROBABILITY
+        option.setOptionLevel(optionDTO.getOptionLevel());  // LOW, MEDIUM, HIGH
+        return option;
+    }
 
-    // Buscar todas as perguntas
+    // Get all questions
     public List<Question> getAllQuestions() {
         return questionRepository.findAll();
     }
 
-    // Buscar todas as perguntas com sugestões
+    // Get all questions (DTO version)
     public List<QuestionDTO> getAllQuestionsWithSuggestion() {
         return questionRepository.findAll()
                 .stream()
                 .map(QuestionDTO::new)
                 .collect(Collectors.toList());
-
     }
 
-    // Buscar perguntas por categoria
+    // Get questions by category
     public List<Question> getQuestionsByCategory(QuestionCategory category) {
         return questionRepository.findByCategory(category);
     }
 
-    // Buscar pergunta por ID
+    // Get a question by ID
     public Optional<Question> getQuestionById(Long id) {
         return questionRepository.findById(id);
     }
 
-    // Deletar uma pergunta
+    // Delete a question
     public void deleteQuestion(Long id) {
         questionRepository.deleteById(id);
     }
